--- a/sections/message/index.html
+++ b/sections/message/index.html
@@ -40,7 +40,7 @@
                                 <a href="https://drive.google.com/file/d/1lYyq1VMUL3jMYatmmScrWCN3BPmimNIP/view?usp=sharing">Message Class</a>
                             </td>
                             <td class="text-center">
-                                <a href="analog_clock.html">Открыть</a>
+                                <a href="https://github.com/PriymakVl/php_solutions/blob/main/sections/message/code/Message.php">Открыть</a>
                             </td>
                             <td>Совместно с контроллером</td>
                         </tr>
